﻿2014-08-25 (Jeff Johnson)
- More invariant parsing for hex string parsing

2014-07-11 (Jeff Johnson)
- Don't do invalid char check in xml reader

2013-10-16 (Jeff Johnson)
- Switch back to equality compare for keywords

2013-7-24 (Jeff Johnson)
- Bail once the first ip address is found in case multiple keywords overlap
- Add example of firewall packet dropping banning (commented out in the config by default)

2013-07-15 (Jeff Johnson)
- Only refresh config file if date changed

2013-07-11 (Jeff Johnson)
- Added MySQL banning to config file.

2013-06-21 (Jeff Johnson)
- Allow specifying a set of valid user names. All others are black listed.

2012-06-23 (Jeff Johnson)
- Allow blacklisting ip addresses by ip address or DNS name
- Allow whitelisting ip addresses by dns name
- Allow not clearing the ban file and unbanning ip addresses when the service restarts