@@ -23,8 +23,8 @@
             <XPath>//Data[@Name='IpAddress']</XPath>
             <Regex>
               <![CDATA[
-              (?<ipaddress>.+)
-            ]]>
+                (?<ipaddress>.+)
+              ]]>
             </Regex>
           </Expression>
         </Expressions>
@@ -33,7 +33,7 @@
       <!-- This group will block audit failures from failed login attempts to Microsoft SQL Server -->
       <Group>
         <Keywords>0x90000000000000</Keywords>
-        <Path>Application</Path>
+        <Path>System</Path>
         <Expressions>
           <Expression>
             <XPath>//Provider[@Name='MSSQLSERVER']</XPath>
@@ -43,8 +43,8 @@
             <XPath>//Data</XPath>
             <Regex>
               <![CDATA[
-              \[Client ?: ?(?<ipaddress>.*?)\]
-            ]]>
+                \[Client ?: ?(?<ipaddress>.*?)\]
+              ]]>
             </Regex>
           </Expression>
         </Expressions>
@@ -63,13 +63,33 @@
             <XPath>//Data</XPath>
             <Regex>
               <![CDATA[
-              Access denied for user .*?'@'(?<ipaddress>.*?)'
-            ]]>
+                Access denied for user .*?'@'(?<ipaddress>.*?)'
+              ]]>
             </Regex>
           </Expression>
         </Expressions>
       </Group>
-
+      
+      <!-- This group will block audit failures from MS Exchange -->
+      <Group>
+        <Keywords>0x80000000000000</Keywords>
+        <Path>System</Path>
+        <Expressions>
+          <Expression>
+            <XPath>//Provider[@Name='MSExchangeTransport']</XPath>
+            <Regex></Regex>
+          </Expression>
+          <Expression>
+            <XPath>//Data</XPath>
+            <Regex>
+              <![CDATA[
+                (?<ipaddress>.+)
+              ]]>
+            </Regex>
+          </Expression>
+        </Expressions>
+      </Group>
+      
       <!-- This group will block audit dropped packet failures from firewall drops to Windows
       <Group>
         <Keywords>0x8010000000000001</Keywords>
