@@ -1,4 +1,7 @@
-﻿2014-08-25 (Jeff Johnson)
+﻿2015-06-08 (Jeff Johnson)
+- Added MS Exchange blocking to default config file
+
+2014-08-25 (Jeff Johnson)
 - More invariant parsing for hex string parsing
 
 2014-07-11 (Jeff Johnson)
